--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<version>2.0.1.Final</version>
 		</dependency>
 
+	<!--for @Valid and @NotBlank-->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
